# brainfucknt

./: CMakeLists.txt  README.md  main  main.cpp  string2bfnt.py
cmake/: FindBoost.cmake
examples/: hello.bfnt  rick.bfnt  truth.bfnt
src/: brainfucknt.hpp  str2bfnt.hpp  transpile.hpp
